--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -19,7 +19,7 @@ body {
   padding: 0;
   margin-bottom: 5px;
   box-shadow: 0px 5px 4px -5px rgba(0,0,0,0.75);
-  z-index: 999;
+  z-index: 0;
   letter-spacing: 1px;
 }
 
@@ -188,8 +188,21 @@ body {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 100%;
+  min-height: 100%;
   overflow: visible;
+}
+
+.about-tile-animated-container {
+
+}
+
+.about-tile-animated-container.mobile {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 25%;
+  width: 100%;
 }
 
 .about-tile {
@@ -202,10 +215,10 @@ body {
 }
 
 .about-tile.mobile {
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
-  height: 22%;
+  align-items: center; */
+  height: 95%;
   width: 95%;
   opacity: .8;
   box-shadow: 1px 2px 10px -4px rgba(0,0,0,0.75);
