--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -141,7 +141,7 @@ body {
 
 .body {
   overflow-x: hidden;
-  background-color: #f2f2f2;
+  background-color: white;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -186,7 +186,7 @@ body {
 
 .about-tiles.mobile {
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
   min-height: 100%;
   overflow: visible;
@@ -199,9 +199,9 @@ body {
 .about-tile-animated-container.mobile {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
-  height: 25%;
+  max-height: 25%;
   width: 100%;
 }
 
@@ -218,11 +218,12 @@ body {
   /* display: flex;
   justify-content: center;
   align-items: center; */
-  height: 95%;
+  height: 100%;
   width: 95%;
   opacity: .8;
   box-shadow: 1px 2px 10px -4px rgba(0,0,0,0.75);
   border-radius: 3px;
+  margin-top: 10px;
 }
 
 .about-tile.mobile:hover {
@@ -307,6 +308,10 @@ body {
 .about-tile-img-bg.mobile {
 }
 
+.about-content-animated-container.mobile {
+  width: 100%;
+}
+
 .about-content {
   height: 65%;
   display: flex;
@@ -314,11 +319,29 @@ body {
   justify-content: center;
 }
 
-.about-content-item-title {
-  text-align: center;
-  font-weight: 600;
-  font-size: 16px;
-  color: white;
+.about-content.mobile {
+  display: flex;
+  justify-content: center;
+  height: fit-content;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.about-content-img.mobile {
+  height: 180px;
+  width: 200px;
+  border-radius: 5px;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+}
+
+.about-content-text.mobile {
+  color: #827e7e;
+  width: 90%;
+  font-size: 12px;
+  font-weight: 300;
+  box-shadow: 0px 2px 5px -4px rgba(0,0,0,0.75);
+  padding: 10px;
+  margin: 0;
 }
 
 .about-content-item-container {
@@ -326,14 +349,6 @@ body {
   flex-direction: row;
   justify-content: center;
   padding: 20px;
-}
-
-.about-content-item-header {
-  height: 33px;
-  background-color: #403e3e;
-  border-radius: 7px 7px 0 0;
-  border-bottom: 1px solid #8c8787;
-  text-align: center;
 }
 
 .about-content-item {
@@ -517,70 +532,36 @@ body {
   color: #636262;
 }
 
+.close {
+  position: absolute;
+  right: 32px;
+  top: 32px;
+  width: 32px;
+  height: 32px;
+  opacity: 0.3;
+}
+.close:hover {
+  opacity: 1;
+}
+.close:before, .close:after {
+  position: absolute;
+  left: 15px;
+  content: ' ';
+  height: 33px;
+  width: 2px;
+  background-color: #333;
+}
+.close:before {
+  transform: rotate(45deg);
+}
+.close:after {
+  transform: rotate(-45deg);
+}
+
 /* ------------------------------------ Mobile ----------------------------------------------- */
 
 
-.about-tile--mobile:hover {
-  opacity: 1;
-  box-shadow: 2px 3px 11px -4px rgba(0,0,0,0.75);
-}
 
-.about-tile-title--mobile {
-  font-size: 12px;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  right: -10px;
-  color: #330b08;
-  letter-spacing: 2px;
-  width: 100px;
-  font-weight: 600;
-}
-
-.about-content-item--mobile {
-  display: flex;
-  width: 90%;
-  height: fit-content;
-  box-shadow: 0px 8px 8px -8px rgba(0,0,0,0.75);
-  flex-direction: column;
-}
-
-.about-content-item-header--mobile {
-  height: 25px;
-  background-color: #403e3e;
-  border-radius: 7px 7px 0 0;
-  border-bottom: 1px solid #8c8787;
-  text-align: center;
-}
-
-.about-content-item-title--mobile {
-  text-align: center;
-  font-weight: 600;
-  font-size: 13px;
-  color: white;
-  margin-top: 6px;
-}
-
-.about-content-item-container--mobile {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 8px;
-}
-
-.about-content-item-img--mobile {
-  height: 100px;
-  width: 100px;
-  margin-right: 15px;
-  border-radius: 5px;
-  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
-}
-
-.about-content-item-text--mobile {
-  font-size: 12px;
-  font-weight: 400;
-}
 
 .thumbnail-container-mobile {
   height: 60px;
