--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -38,105 +38,77 @@
     <div class="content">
       <div class="about-container">
         <div class="about-tiles">
-          <div class="about-tile" onclick={{action "tileSelected" 'about'}}>
+          <div class="about-tile" onmouseover={{action "tileSelected" 'about'}}>
             <img class="about-tile-img-bg" src="/images/code.jpg">
             <img class="about-tile-img-text-1" src="/images/about.png">
           </div>
-          <div class="about-tile" onclick={{action "tileSelected" 'career'}}>
+          <div class="about-tile" onmouseover={{action "tileSelected" 'career'}}>
             <img class="about-tile-img-bg" src="/images/career.jpg">
             <img class="about-tile-img-text-2" src="/images/career.png">
           </div>
-          <div class="about-tile" onclick={{action "tileSelected" 'education'}}>
+          <div class="about-tile" onmouseover={{action "tileSelected" 'education'}}>
             <img class="about-tile-img-bg" src="/images/education.jpg">
             <img class="about-tile-img-text-3" src="/images/education.png">
           </div>
-          <div class="about-tile" onclick={{action "tileSelected" 'awards'}}>
+          <div class="about-tile" onmouseover={{action "tileSelected" 'awards'}}>
             <img class="about-tile-img-bg" src="/images/awards.jpg">
             <img class="about-tile-img-text-4" src="/images/awards.png">
           </div>
         </div>
-        <div class="about-content">
-          {{#if (eq this.currentTile 'about')}}
-            <div class="about-content-item">
-              <div class="about-content-item-header">
-                <h1 class="about-content-item-title">
-                  About
-                </h1>
-              </div>
-              <div class="about-content-item-container">
-                <img class="about-content-item-img" src="/images/me.jpg">
-                <p class="about-content-item-text">
-                  Shane is a freelance software and web developer from Dublin, Ireland.
-                  <br><br>
-                  He has experience working in frontend, backend, android and desktop development.
-                  <br><br>
-                  He is passionate about building beautiful, responsive, and robust web applications.
-                </p>
-              </div>
+        <AnimatedContainer class="about-content-animated-container">
+          {{#animated-if (eq this.currentSection 'about') duration=1000 use=this.transitionMove}}
+            <div class="about-content">
+              <img class="about-content-img" src="/images/me.jpg">
+              <p class="about-content-text">
+                Shane is a freelance software and web developer from Dublin, Ireland.
+                <br><br>
+                He has experience working in frontend, backend, android and desktop development.
+                <br><br>
+                He is passionate about building beautiful, responsive, and robust web applications.
+              </p>
             </div>
-          {{/if}}
-          {{#if (eq this.currentTile 'education')}}
-            <div class="about-content-item">
-              <div class="about-content-item-header">
-                <h1 class="about-content-item-title">
-                  Education
-                </h1>
-              </div>
-              <div class="about-content-item-container">
-                <img class="about-content-item-img" src="/images/me.jpg">
-                <p class="about-content-item-text">
-                  Shane graduated from Dublin City University in 2017 with an honours degree in Computer Science.
-                  <br><br>
-                  He specialized in wearable technology, machine translation and computer graphics.
-                  <br><br>
-                  He achieved a first class honours result and an award for his final year project.
-                </p>
-              </div>
+          {{/animated-if}}
+          {{#animated-if (eq this.currentSection 'career') duration=1000 use=this.transitionMove}}
+            <div class="about-content">
+              <img class="about-content-img" src="/images/working.jpg">
+              <p class="about-content-text">
+                Shane has experience in both small startups and large corporations, working with a wide range of technologies.
+                <br>
+                He has built frontend applications for the largest salon booking software in the world.
+                <br>
+                He has worked on backend and database infrastructure for large banking multinationals.
+                <br>
+                He has also done many smaller projects (frontend + backend) for individuals and startup companies;
+              </p>
             </div>
-          {{/if}}
-          {{#if (eq this.currentTile 'career')}}
-            <div class="about-content-item">
-              <div class="about-content-item-header">
-                <h1 class="about-content-item-title">
-                  Career
-                </h1>
-              </div>
-              <div class="about-content-item-container">
-                <img class="about-content-item-img" src="/images/career.jpg">
-                <p class="about-content-item-text">
-                  Shane has experience in both small startups and large corporations, working with a wide range of technologies.
-                  <br><br>
-                  Shane has built frontend applications for the largest salon booking software in the world.
-                  <br><br>
-                  He has worked on backend and database infrastructure for large banking multinationals.
-                  <br><br>
-                  He has also done many smaller projects (frontend + backend) for individuals and startup companies;
-                </p>
-              </div>
+          {{/animated-if}}
+          {{#animated-if (eq this.currentSection 'education') duration=1000 use=this.transitionMove}}
+            <div class="about-content">
+              <img class="about-content-img" src="/images/dcu.jpg">
+              <p class="about-content-text">
+                Shane graduated from Dublin City University in 2017 with an honours degree in Computer Science.
+                <br><br>
+                He specialized in wearable technology, machine translation and computer graphics.
+                <br><br>
+                He achieved a first class honours result and an award for his final year project.
+              </p>
             </div>
-          {{/if}}
-          {{#if (eq this.currentTile 'awards')}}
-            <div class="about-content-item">
-              <div class="about-content-item-header">
-                <h1 class="about-content-item-title">
-                  Awards
-                </h1>
-              </div>
-              <div class="about-content-item-container">
-                <img class="about-content-item-img" src="/images/openet.jpeg">
-                <p class="about-content-item-text">
-                  Shane was awarded Most Innovative Project at the Dublin City University 2017 final year project expo.
-                  <br><br>
-                  Shane has built frontend applications for the largest salon booking software in the world.
-                  <br><br>
-                  His project was a wearable technology navigation system for cyclists consisting of an android app and an arduino which was fitted to a helmet, using a light system to direct the cyclist to their destination.
-                  <br><br>
-                  Shane received first class honours for the project as well as a new Ipad.
-                </p>
-              </div>
+          {{/animated-if}}
+          {{#animated-if (eq this.currentSection 'awards') duration=1000 use=this.transitionMove}}
+            <div class="about-content">
+              <img class="about-content-img" src="/images/openet.jpeg">
+              <p class="about-content-text">
+                Shane was awarded Most Innovative Project at the Dublin City University 2017 final year project expo.
+                <br><br>
+                Shane has built frontend applications for the largest salon booking software in the world.
+                <br><br>
+                His project was a wearable technology navigation system for cyclists consisting of an android app and an arduino which was fitted to a helmet, using a light system to direct the cyclist to their destination.
+                <br><br>
+                Shane received first class honours for the project as well as a new Ipad.
+              </p>
             </div>
-          {{/if}}
-        </div>
+          {{/animated-if}}
+        </AnimatedContainer>
       </div>
       <div id="about-end"></div>
 
@@ -156,32 +128,38 @@
           <img class="thumbnail-img" src="/images/nodejs.png">
           <img class="thumbnail-img" src="/images/android.png">
         </div>
-        <div class="animated-container">
-          <AnimatedContainer class="animated-heading">
+        <div class="slideshow">
+          <AnimatedContainer class="slideshow-heading">
             {{#animated-value this.currentTech use=this.transitionFade as |value|}}
-              <h2 class="animated-heading-title">
+              <h2 class="slideshow-title">
                 {{value}}
               </h2>
             {{/animated-value}}
           </AnimatedContainer>
-          <div class="animated-content-container">
-            <AnimatedContainer class="animated-slideshow">
-
+          <div class="slideshow-container">
+            <AnimatedContainer class="slideshow-content">
               {{#animated-if (eq this.imgCount 0) duration=1500 use=this.transitionMove}}
-                <img class="img-slideshow" src="/images/html-css-js.png">
+                <img class="slideshow-img" src="/images/html-css-js.png">
               {{/animated-if}}
               {{#animated-if (eq this.imgCount 1) duration=1500 use=this.transitionMove}}
-                <img class="img-slideshow" src="/images/ember-icon.svg">
+                <img class="slideshow-img" src="/images/ember-icon.svg">
               {{/animated-if}}
               {{#animated-if (eq this.imgCount 2) duration=1500 use=this.transitionMove}}
-                <img class="img-slideshow" src="/images/spring.png">
+                <img class="slideshow-img" src="/images/spring.png">
               {{/animated-if}}
               {{#animated-if (eq this.imgCount 3) duration=1500 use=this.transitionMove}}
-                <img class="img-slideshow" src="/images/nodejs.png">
+                <img class="slideshow-img" src="/images/nodejs.png">
               {{/animated-if}}
               {{#animated-if (eq this.imgCount 4) duration=1500 use=this.transitionMove}}
-                <img class="img-slideshow" src="/images/android.png">
+                <img class="slideshow-img" src="/images/android.png">
               {{/animated-if}}
+            </AnimatedContainer>
+            <AnimatedContainer class="slideshow-details">
+              <h2 class="slideshow-details-text">
+                Ember.js is a productive, battle-tested JavaScript framework for building modern web applications.
+                <br><br>
+                It includes everything you need to build rich UIs that work on any device.
+              </h2>
             </AnimatedContainer>
           </div>
         </div>
@@ -372,88 +350,6 @@
             {{/animated-if}}
           </AnimatedContainer>
         </div>
-        <!-- <div class="about-content">
-          {{#if (eq this.currentTile 'about')}}
-            <div class="about-content-item--mobile">
-              <div class="about-content-item-header--mobile">
-                <h1 class="about-content-item-title--mobile">
-                  About
-                </h1>
-              </div>
-              <div class="about-content-item-container--mobile">
-                <img class="about-content-item-img--mobile" src="/images/me.jpg">
-                <p class="about-content-item-text--mobile">
-                  Shane is a freelance software and web developer from Dublin, Ireland.
-                  <br><br>
-                  He has experience working in frontend, backend, android and desktop development.
-                  <br><br>
-                  He is passionate about building beautiful, responsive, and robust web applications.
-                </p>
-              </div>
-            </div>
-          {{/if}}
-          {{#if (eq this.currentTile 'education')}}
-            <div class="about-content-item--mobile">
-              <div class="about-content-item-header--mobile">
-                <h1 class="about-content-item-title--mobile">
-                  Education
-                </h1>
-              </div>
-              <div class="about-content-item-container--mobile">
-                <img class="about-content-item-img--mobile" src="/images/me.jpg">
-                <p class="about-content-item-text--mobile">
-                  Shane graduated from Dublin City University in 2017 with an honours degree in Computer Science.
-                  <br><br>
-                  He specialized in wearable technology, machine translation and computer graphics.
-                  <br><br>
-                  He achieved a first class honours result and an award for his final year project.
-                </p>
-              </div>
-            </div>
-          {{/if}}
-          {{#if (eq this.currentTile 'career')}}
-            <div class="about-content-item--mobile">
-              <div class="about-content-item-header--mobile">
-                <h1 class="about-content-item-title--mobile">
-                  Career
-                </h1>
-              </div>
-              <div class="about-content-item-container--mobile">
-                <img class="about-content-item-img--mobile" src="/images/career.jpg">
-                <p class="about-content-item-text--mobile">
-                  Shane has experience in both small startups and large corporations, working with a wide range of technologies.
-                  <br><br>
-                  Shane has built frontend applications for the largest salon booking software in the world.
-                  <br><br>
-                  He has worked on backend and database infrastructure for large banking multinationals.
-                  <br><br>
-                  He has also done many smaller projects (frontend + backend) for individuals and startup companies;
-                </p>
-              </div>
-            </div>
-          {{/if}}
-          {{#if (eq this.currentTile 'awards')}}
-            <div class="about-content-item--mobile">
-              <div class="about-content-item-header--mobile">
-                <h1 class="about-content-item-title--mobile">
-                  Awards
-                </h1>
-              </div>
-              <div class="about-content-item-container--mobile">
-                <img class="about-content-item-img--mobile" src="/images/openet.jpeg">
-                <p class="about-content-item-text--mobile">
-                  Shane was awarded Most Innovative Project at the Dublin City University 2017 final year project expo.
-                  <br><br>
-                  Shane has built frontend applications for the largest salon booking software in the world.
-                  <br><br>
-                  His project was a wearable technology navigation system for cyclists consisting of an android app and an arduino which was fitted to a helmet, using a light system to direct the cyclist to their destination.
-                  <br><br>
-                  Shane received first class honours for the project as well as a new Ipad.
-                </p>
-              </div>
-            </div>
-          {{/if}}
-        </div> -->
       </div>
       <div id="about-end"></div>
 
@@ -473,32 +369,38 @@
           <img class={{if this.isMobile "thumbnail-img-mobile" "thumbnail-img"}} src="/images/nodejs.png">
           <img class={{if this.isMobile "thumbnail-img-mobile" "thumbnail-img"}} src="/images/android.png">
         </div>
-        <div class="animated-container">
-          <AnimatedContainer class="animated-heading">
+        <div class="slideshow mobile">
+          <AnimatedContainer class="slideshow-heading mobile">
             {{#animated-value this.currentTech use=this.transitionFade as |value|}}
-              <h2 class={{if this.isMobile "animated-heading-mobile" "animated-heading-title"}}>
+              <h2 class="slideshow-title mobile">
                 {{value}}
               </h2>
             {{/animated-value}}
           </AnimatedContainer>
-          <div class="animated-content-container">
-            <AnimatedContainer class="animated-slideshow">
-
+          <div class="slideshow-container mobile">
+            <AnimatedContainer class="slideshow-content mobile">
               {{#animated-if (eq this.imgCount 0) duration=1500 use=this.transitionMove}}
-                <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/html-css-js.png">
+                <img class="slideshow-img mobile" src="/images/html-css-js.png">
               {{/animated-if}}
               {{#animated-if (eq this.imgCount 1) duration=1500 use=this.transitionMove}}
-                <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/ember-icon.svg">
+                <img class="slideshow-img mobile" src="/images/ember-icon.svg">
               {{/animated-if}}
               {{#animated-if (eq this.imgCount 2) duration=1500 use=this.transitionMove}}
-                <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/spring.png">
+                <img class="slideshow-img mobile" src="/images/spring.png">
               {{/animated-if}}
               {{#animated-if (eq this.imgCount 3) duration=1500 use=this.transitionMove}}
-                <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/nodejs.png">
+                <img class="slideshow-img mobile" src="/images/nodejs.png">
               {{/animated-if}}
               {{#animated-if (eq this.imgCount 4) duration=1500 use=this.transitionMove}}
-                <img class={{if this.isMobile "img-slideshow-mobile" "img-slideshow"}} src="/images/android.png">
+                <img class="slideshow-img mobile" src="/images/android.png">
               {{/animated-if}}
+            </AnimatedContainer>
+            <AnimatedContainer class="slideshow-details mobile">
+              <h2 class="slideshow-details-text">
+                Ember.js is a productive, battle-tested JavaScript framework for building modern web applications.
+                <br><br>
+                It includes everything you need to build rich UIs that work on any device.
+              </h2>
             </AnimatedContainer>
           </div>
         </div>
