--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -362,12 +362,12 @@
       </div>
 
       <div class="tech-container">
-        <div class={{if this.isMobile "thumbnail-container-mobile" "thumbnail-container"}}>
-          <img class={{if this.isMobile "thumbnail-img-mobile" "thumbnail-img"}} src="/images/html-css-js.png">
-          <img class={{if this.isMobile "thumbnail-img-mobile" "thumbnail-img"}} src="/images/ember-icon.svg">
-          <img class={{if this.isMobile "thumbnail-img-mobile" "thumbnail-img"}} src="/images/spring.png">
-          <img class={{if this.isMobile "thumbnail-img-mobile" "thumbnail-img"}} src="/images/nodejs.png">
-          <img class={{if this.isMobile "thumbnail-img-mobile" "thumbnail-img"}} src="/images/android.png">
+        <div class="thumbnail-container">
+          <img class="thumbnail-img mobile" src="/images/html-css-js.png">
+          <img class="thumbnail-img mobile" src="/images/ember-icon.svg">
+          <img class="thumbnail-img mobile" src="/images/spring.png">
+          <img class="thumbnail-img mobile" src="/images/nodejs.png">
+          <img class="thumbnail-img mobile" src="/images/android.png">
         </div>
         <div class="slideshow mobile">
           <AnimatedContainer class="slideshow-heading mobile">
@@ -432,15 +432,15 @@
         <div class={{if this.isMobile "seperator-line-right-mobile" "seperator-line-right"}}></div>
       </div>
 
-      <div class={{if this.isMobile "links-mobile" "links"}}>
-       <a class={{if this.isMobile "link-mobile" "link"}} href="mailto:sgoneill89@gmail.com">
-         <img class="{{if this.isMobile "gmail-icon-mobile" "gmail-icon"}}" src="images/gmail.png">
+      <div class="links mobile">
+       <a class="link" href="mailto:sgoneill89@gmail.com">
+         <img class="gmail-icon" src="images/gmail.png">
        </a>
-       <a class={{if this.isMobile "link-mobile" "link"}} href="https://github.com/ShaneON">
-         <img class={{if this.isMobile "github-icon-mobile" "github-icon"}} src="images/github.png">
+       <a class="link" href="https://github.com/ShaneON">
+         <img class="github-icon" src="images/github.png">
        </a>
-       <a class={{if this.isMobile "link-mobile" "link"}} href="https://linkedin.com/in/shane-o-neill-7b133511b">
-         <img class={{if this.isMobile "linkedin-icon-mobile" "linkedin-icon"}} src="images/linkedin.png">
+       <a class="link" href="https://linkedin.com/in/shane-o-neill-7b133511b">
+         <img class="linkedin-icon" src="images/linkedin.png">
        </a>
       </div>
     </div>
