--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -73,11 +73,11 @@
               <img class="about-content-img" src="/images/working.jpg">
               <p class="about-content-text">
                 Shane has experience in both small startups and large corporations, working with a wide range of technologies.
-                <br>
+                <br><br>
                 He has built frontend applications for the largest salon booking software in the world.
-                <br>
+                <br><br>
                 He has worked on backend and database infrastructure for large banking multinationals.
-                <br>
+                <br><br>
                 He has also done many smaller projects (frontend + backend) for individuals and startup companies;
               </p>
             </div>
@@ -353,12 +353,12 @@
       </div>
       <div id="about-end"></div>
 
-      <div class={{if this.isMobile "seperator-mobile" "seperator"}} id="tech">
-        <div class={{if this.isMobile "seperator-line-left-mobile" "seperator-line-left"}}></div>
-        <h2 class={{if this.isMobile "seperator-title-mobile" "seperator-title"}}>
+      <div class="seperator mobile" id="tech">
+        <div class="seperator-line-left mobile"></div>
+        <h2 class="seperator-title mobile">
           Technologies
         </h2>
-        <div class={{if this.isMobile "seperator-line-right-mobile" "seperator-line-right"}}></div>
+        <div class="seperator-line-right mobile"></div>
       </div>
 
       <div class="tech-container">
@@ -407,29 +407,29 @@
       </div>
       <div id="tech-end"></div>
 
-      <div class={{if this.isMobile "seperator-mobile" "seperator"}} id="cv">
-        <div class={{if this.isMobile "seperator-line-left-mobile" "seperator-line-left"}}></div>
-        <h2 class={{if this.isMobile "seperator-title-mobile" "seperator-title"}}>
+      <div class="seperator mobile" id="cv">
+        <div class="seperator-line-left mobile"></div>
+        <h2 class="seperator-title mobile">
           CV
         </h2>
-        <div class={{if this.isMobile "seperator-line-right-mobile" "seperator-line-right"}}></div>
+        <div class="seperator-line-right mobile"></div>
       </div>
 
-      <div class={{if this.isMobile "cv-container-mobile" "cv-container"}}>
+      <div class="cv-container">
 
-        <img class={{if this.isMobile "cv-image-large-mobile" "cv-image-large"}} src="images/cv1.jpg"/>
+        <img class="cv-image-large" src="images/cv1.jpg"/>
 
-        <img class={{if this.isMobile "cv-image-small-mobile" "cv-image-small"}} src="images/cv1.jpg"/>
-        <img class={{if this.isMobile "cv-image-small-mobile" "cv-image-small"}} src="images/cv2.jpg"/>
+        <img class="cv-image-small" src="images/cv1.jpg"/>
+        <img class="cv-image-small" src="images/cv2.jpg"/>
       </div>
       <div id="cv-end"></div>
 
-      <div class={{if this.isMobile "seperator-mobile" "seperator"}} id="contact">
-        <div class={{if this.isMobile "seperator-line-left-mobile" "seperator-line-left"}}></div>
-        <h2 class={{if this.isMobile "seperator-title-mobile" "seperator-title"}}>
+      <div class="seperator mobile" id="contact">
+        <div class="seperator-line-left mobile"></div>
+        <h2 class="seperator-title mobile">
           Contact
         </h2>
-        <div class={{if this.isMobile "seperator-line-right-mobile" "seperator-line-right"}}></div>
+        <div class="seperator-line-right mobile"></div>
       </div>
 
       <div class="links mobile">
